--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">GuiaTPU</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Mi Ruta</string>
+    <string name="title_dashboard">Catalogo</string>
+    <string name="title_notifications">Historial</string>
 
     <string name="title_activity_login">Login</string>
     <string name="dummy_button">Dummy Button</string>
