--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="instrucciones">Camina del punto verde al punto amarillo Para abordar el autobus que se muestra en la imagen, baja en el punto azul y camina a tu lugar de destino</string>
 </resources>
